--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     ]
   },
   "dependencies": {
-    "1eurofilter": "^1.2.2",
     "@dnd-kit/core": "^6.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.0.0",
@@ -41,6 +40,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@vapi-ai/web": "^2.0.0",
+    "1eurofilter": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.0",
@@ -76,6 +76,7 @@
     "playwright": "^1.57.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "vitest": "^4.0.15"
   }
